--- a/2QBonusCardGonzaga.html
+++ b/2QBonusCardGonzaga.html
@@ -104,7 +104,7 @@
             color: white;
             font-family: Georgia, 'Times New Roman', Times, serif;
         }
-        /* I js copy pasted old animations from other practice files I made hehehe */
+        /* I js copy pasted old animations from other practice files I made hehehe and also consulted youtube for more cool animation stuffs! */
     </style>
 </head>
 <body>
