--- a/2QBonusCardGonzaga.html
+++ b/2QBonusCardGonzaga.html
@@ -103,6 +103,10 @@
             margin: 10px 0;
             color: white;
             font-family: Georgia, 'Times New Roman', Times, serif;
+            font-weight: 30px;
+            font-size: 20px;
+            text-align: center;
+
         }
         /* I js copy pasted old animations from other practice files I made hehehe and also consulted youtube for more cool animation stuffs! */
     </style>
